@@ -6,7 +6,7 @@
  *   DESCRIPTION
  *      Convenience header: include all libpqxx definitions
  *
- * Copyright (c) 2003-2004, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2003-2006, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -14,6 +14,7 @@
  *
  *-------------------------------------------------------------------------
  */
+#include "pqxx/binarystring"
 #include "pqxx/connection"
 #include "pqxx/cursor"
 #include "pqxx/largeobject"
